<resources>
    <string name="level_format">%d уровень</string>
    <string name="health_format">%d HP</string>
    <string name="mana_format">%d MP</string>
    <string name="refreshing">Обновление...</string>
    <string name="refresh">Обновить</string>
    <string name="logout_title">Выход</string>
    <string name="logout_message">Вы действительно хотите выйти?</string>
    <string name="logout_success">Вы успешно вышли</string>
    <string name="logout_failed">Ошибка выхода</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">ОК</string>
    <string name="session_expired_title">Сессия истекла</string>
    <string name="session_expired_message">Пожалуйста, войдите снова</string>
    <string name="idle_notification">Вы бездействуете</string>
    <string name="app_name">ANLC</string>
    <string name="app_full_name">Android Neverlands Client</string>
    <string name="action_settings">Настройки</string>
    <string name="action_exit">Выход</string>
    <string name="action_login">Вход</string>
    <string name="action_forum">Форум</string>
    <string name="action_chat">Чат</string>
    <string name="action_notepad">Блокнот</string>
    <string name="action_new_tab">Новая вкладка</string>
    <string name="action_site">Сайт</string>
    <string name="action_settings_general">Общие настройки</string>
    <string name="action_clan_private">Клановый приват</string>
    <string name="action_rek_private">Рекрутский приват</string>
    <string name="action_minimize">Свернуть</string>
    <string name="action_guamod">Гуамод</string>
    <string name="action_cache_refresh">Обновить кэш</string>
    <string name="action_check_new_version">Проверить обновления</string>
    <string name="action_update_key">Обновить ключ</string>
    <string name="action_about">О программе</string>
    <string name="action_fish_advisor">Советник по рыбалке</string>
    <string name="message_proxy_init_error">Ошибка инициализации прокси</string>
    <string name="error_configs_load_title">Ошибка работы с профайлами</string>
    
    <!-- Строки для SplashActivity -->
    <string name="splash_loading">Загрузка...</string>
    <string name="splash_initializing">Инициализация приложения...</string>
    <string name="splash_loading_profiles">Загрузка профилей...</string>
    <string name="splash_loading_map">Загрузка карты...</string>
    <string name="splash_loading_favorites">Загрузка избранного...</string>
    <string name="splash_starting">Запуск приложения...</string>
    
    <!-- Строки для ProfileActivity -->
    <string name="profile_title">Профиль</string>
    <string name="profile_new_title">Новый профиль</string>
    <string name="profile_edit_title">Редактирование профиля</string>
    <string name="profile_basic_settings">Основные настройки</string>
    <string name="profile_name">Имя профиля</string>
    <string name="profile_login">Логин</string>
    <string name="profile_password">Пароль</string>
    <string name="profile_save_password">Сохранить пароль</string>
    <string name="profile_auto_login">Автоматический вход</string>
    <string name="profile_proxy_settings">Настройки прокси</string>
    <string name="profile_use_proxy">Использовать прокси</string>
    <string name="profile_proxy_host">Адрес прокси</string>
    <string name="profile_proxy_port">Порт прокси</string>
    <string name="profile_proxy_user">Пользователь прокси</string>
    <string name="profile_proxy_password">Пароль прокси</string>
    <string name="profile_save">Сохранить</string>
    <string name="profile_cancel">Отмена</string>
    <string name="profile_saved">Профиль сохранен</string>
    <string name="profile_error_name_empty">Введите имя профиля</string>
    <string name="profile_error_login_empty">Введите логин</string>
    <string name="profile_error_proxy_host_empty">Введите адрес прокси</string>
    <string name="profile_error_proxy_port_empty">Введите порт прокси</string>
    <string name="profile_error_proxy_port_invalid">Некорректный порт прокси</string>
    <string name="profile_error_exists">Профиль с таким именем уже существует</string>
    
    <!-- Строки для ErrorActivity -->
    <string name="error_title">Произошла ошибка</string>
    <string name="error_description">В приложении произошла непредвиденная ошибка:</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_copy">Копировать</string>
    <string name="error_close">Закрыть</string>
    <string name="error_copied">Информация об ошибке скопирована в буфер обмена</string>
    <string name="error_copy_failed">Не удалось скопировать информацию об ошибке</string>
    
    <!-- Строки для ClearExplorerCacheActivity -->
    <string name="clear_cache_title">Очистка кэша браузера</string>
    <string name="clear_cache_starting">Начало очистки кэша...</string>
    <string name="clear_cache_cookies">Очистка cookies...</string>
    <string name="clear_cache_files">Очистка файлов кэша...</string>
    <string name="clear_cache_finalizing">Завершение очистки...</string>
    <string name="clear_cache_completed">Кэш браузера успешно очищен</string>
    <string name="clear_cache_error">Ошибка при очистке кэша: %1$s</string>
    <string name="clear_cache_close">Закрыть</string>
</resources>